# server/api/controllers/users/router.ts
@@ -1,0 +1,6 @@
+import * as express from 'express';
+import controller from './controller';
+export default express.Router().post('/login', controller.login);
+
+
+
